ka1/kube1/services/mealie/mealie-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  selector:
    app: mealie
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      hostname: mealie
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v3.28.0
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: mealie-data
              mountPath: /app/data
          imagePullPolicy: Always
          resources:
            requests:
              memory: 512Mi
            limits:
              memory: 1Gi
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data-pvc
