ka1/kube1/services/mealie/mealie-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mealie-https-gateway
  annotations:
    cert-manager.io/cluster-issuer: "clusterissuer-cloudflare-acme-prod"
    brodatzki.net/enable-public-tunnel: "true"
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "mealie.ka1.brodatzki.net"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: mealie-gateway-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: http
      protocol: HTTP
      port: 80
      hostname: "mealie.ka1.brodatzki.net"
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie-http-to-https-redirect
spec:
  parentRefs:
    - name: mealie-https-gateway
      sectionName: http
  hostnames:
    - "mealie.ka1.brodatzki.net"
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mealie-service-route
spec:
  parentRefs:
    - name: mealie-https-gateway
      sectionName: https
  hostnames:
    - "mealie.ka1.brodatzki.net"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: mealie
          port: 9000
